--- a/public/index.html
+++ b/public/index.html
@@ -116,74 +116,99 @@
 </header>
 
 
-    <main class="container">
-        <article>
-            <div class="menu-display">
-                <div id="loading-indicator">
-                    <div class="loader"></div>
-                    <p>로딩 중...</p>
+    <main class="mx-auto max-w-[1200px] px-6 py-8">
+        <div class="grid grid-cols-1 gap-8 lg:grid-cols-12">
+            <div class="lg:col-span-12">
+                <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
+                    <article>
+                        <div class="menu-display">
+                            <div id="loading-indicator">
+                                <div class="loader"></div>
+                                <p>로딩 중...</p>
+                            </div>
+                            <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none; width:30em; max-width: 100%; height: auto; margin-bottom: 15px; border-radius: 8px;">
+                            <span id="menu-recommendation">AI가 잠시 후 저녁 메뉴를 추천합니다...</span>
+                        </div>
+                        <button id="generate">추천 받기</button>
+                    </article>
                 </div>
-                <img id="menu-image" src="" alt="추천 메뉴 이미지" style="display: none; width:30em; max-width: 100%; height: auto; margin-bottom: 15px; border-radius: 8px;">
-                <span id="menu-recommendation">AI가 잠시 후 저녁 메뉴를 추천합니다...</span>
             </div>
-            <button id="generate">추천 받기</button>
-        </article>
 
-        <section>
-            <h2>AI 저녁 메뉴 추천기란?</h2>
-            <p>본 웹사이트는 결정 장애를 겪는 분들을 위해 버튼 클릭 한 번으로 저녁 메뉴를 추천해주는 AI 기반 도구입니다. 추천 메뉴는 한식, 중식, 일식, 양식 등 다양한 카테고리를 포함합니다.</p>
-        </section>
+            <div class="lg:col-span-12 mt-8">
+                <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
+                    <section>
+                        <h2>AI 저녁 메뉴 추천기란?</h2>
+                        <p>본 웹사이트는 결정 장애를 겪는 분들을 위해 버튼 클릭 한 번으로 저녁 메뉴를 추천해주는 AI 기반 도구입니다. 추천 메뉴는 한식, 중식, 일식, 양식 등 다양한 카테고리를 포함합니다.</p>
+                    </section>
+                </div>
+            </div>
 
-        <section>
-            <h2>자주 묻는 질문 (Q&A)</h2>
-            <h3>Q. 추천은 어떻게 이루어지나요?</h3>
-            <p>A. AI가 사전에 학습한 방대한 메뉴 데이터베이스에서 무작위로 1개의 메뉴를 선정하여 추천합니다.</p>
-            <h3>Q. 메뉴를 직접 추가할 수 있나요?</h3>
-            <p>A. 현재는 메뉴 추가 기능이 없으나, 제휴 문의를 통해 메뉴 추가를 제안하실 수 있습니다.</p>
-        </section>
+            <div class="lg:col-span-12 mt-8">
+                <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
+                    <section>
+                        <h2>자주 묻는 질문 (Q&A)</h2>
+                        <h3>Q. 추천은 어떻게 이루어지나요?</h3>
+                        <p>A. AI가 사전에 학습한 방대한 메뉴 데이터베이스에서 무작위로 1개의 메뉴를 선정하여 추천합니다.</p>
+                        <h3>Q. 메뉴를 직접 추가할 수 있나요?</h3>
+                        <p>A. 현재는 메뉴 추가 기능이 없으나, 제휴 문의를 통해 메뉴 추가를 제안하실 수 있습니다.</p>
+                    </section>
+                </div>
+            </div>
 
-        <section>
-            <h2>데이터 출처 및 기준</h2>
-            <p>본 추천기의 메뉴 리스트는 대한민국 인기 외식 메뉴 및 배달 음식 데이터를 기반으로 작성되었습니다. (기준일: 2026년 1월)</p>
-            <table>
-                <caption>카테고리별 메뉴 예시</caption>
-                <thead>
-                    <tr>
-                        <th>한식</th>
-                        <th>중식</th>
-                        <th>일식</th>
-                        <th>양식</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>김치찌개</td>
-                        <td>짜장면</td>
-                        <td>초밥</td>
-                        <td>파스타</td>
-                    </tr>
-                    <tr>
-                        <td>된장찌개</td>
-                        <td>짬뽕</td>
-                        <td>라멘</td>
-                        <td>피자</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </main>
+            <div class="lg:col-span-12 mt-8">
+                <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
+                    <section>
+                        <h2>데이터 출처 및 기준</h2>
+                        <p>본 추천기의 메뉴 리스트는 대한민국 인기 외식 메뉴 및 배달 음식 데이터를 기반으로 작성되었습니다. (기준일: 2026년 1월)</p>
+                        <table>
+                            <caption>카테고리별 메뉴 예시</caption>
+                            <thead>
+                                <tr>
+                                    <th>한식</th>
+                                    <th>중식</th>
+                                    <th>일식</th>
+                                    <th>양식</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>김치찌개</td>
+                                    <td>짜장면</td>
+                                    <td>초밥</td>
+                                    <td>파스타</td>
+                                </tr>
+                                <tr>
+                                    <td>된장찌개</td>
+                                    <td>짬뽕</td>
+                                    <td>라멘</td>
+                                    <td>피자</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </section>
+                </div>
+            </div>
 
-    <div class="contact-section">
-        <h2>저녁 메뉴 추천 제휴 문의</h2>
-        <form action="https://formspree.io/f/mlggrwrk" method="POST">
-            <input type="text" name="name" placeholder="이름" required>
-            <input type="email" name="email" placeholder="이메일" required>
-            <textarea name="message" placeholder="내용" required></textarea>
-            <button type="submit">보내기</button>
-        </form>
-    </div>
+            <div class="lg:col-span-12 mt-8">
+                <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
+                    <div class="contact-section">
+                        <h2>저녁 메뉴 추천 제휴 문의</h2>
+                        <form action="https://formspree.io/f/mlggrwrk" method="POST">
+                            <input type="text" name="name" placeholder="이름" required>
+                            <input type="email" name="email" placeholder="이메일" required>
+                            <textarea name="message" placeholder="내용" required></textarea>
+                            <button type="submit">보내기</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
-    <div id="disqus_thread"></div>
+            <div class="lg:col-span-12 mt-8">
+                <div class="flex flex-col overflow-hidden rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-8 shadow-sm">
+                    <div id="disqus_thread"></div>
+                </div>
+            </div>
+        </div>
 
 <footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
 <div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
